<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/grey">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        style="@style/card"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_item_photo"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:src="@drawable/yusuf" />

            <TextView
                android:id="@+id/name_profil"
                style="@style/title.h1"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"
                android:text="@string/name"/>

            <TextView
                android:id="@+id/email_profil"
                android:textColor="@color/navy_2"
                style="@style/title.subtitle"
                android:text="@string/email"
                android:layout_marginTop="5dp"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/ig_profil"
                android:textColor="@color/navy_2"
                style="@style/title.subtitle"
                android:text="@string/instagram"
                android:layout_marginTop="5dp"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/twitter_profil"
                android:textColor="@color/navy_2"
                style="@style/title.subtitle"
                android:text="@string/twitter"
                android:layout_marginTop="5dp"
                android:textAlignment="center"/>



        </LinearLayout>
    </androidx.cardview.widget.CardView>
</ScrollView>