<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    style="@style/card"
    android:layout_gravity="center"
    android:layout_marginBottom="8dp"
    card_view:cardElevation="0dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="146dp"
        android:padding="8dp">



        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_item_photo"
            android:layout_width="160dp"
            android:layout_height="180dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:src="@drawable/yusuf" />

        <TextView
            android:id="@+id/tv_item_name"
            style="@style/title.h2"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@id/img_item_photo"
            android:textColor="@color/navy_2"
            tools:text="@string/food_name" />

        <TextView
            android:id="@+id/tv_item_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_item_name"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@id/img_item_photo"
            android:ellipsize="end"
            android:maxLines="3"
            tools:text="@string/detail" />

        <TextView
            android:id="@+id/tv_item_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_item_name"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@id/img_item_photo"
            android:ellipsize="end"
            android:maxLines="3"
            tools:text="@string/detail" />

        <LinearLayout
            android:id="@+id/layout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_item_detail"
            android:layout_marginStart="7dp"
            android:layout_marginTop="7dp"
            android:layout_toEndOf="@id/img_item_photo"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn_set_share"
                style="@style/button.share"
                android:layout_width="wrap_content"
                android:contentDescription="@string/share"

                android:elevation="0dp"
                android:src="@drawable/bh" />
        </LinearLayout>


    </RelativeLayout>

</androidx.cardview.widget.CardView>